fix: nowrap category

--- a/src/components/Categories/styles.module.scss
+++ b/src/components/Categories/styles.module.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     padding: 8px 18px;
     position: relative;
+    white-space: nowrap;
 
     & + label {
       margin-left: 10px;
